# generating-guis-with-LLMs

./: .env  pyproject.toml
data/: metadata.csv  s2w_sample.csv
generated_GUIs/: 1050_S2W.html  1264_S2W.html  1365_S2W.html  13974.html  13974_S2W.html  1929_S2W.html  2930_S2W.html  33_S2W.html  377.html  377_S2W.html  486.html  486_S2W.html  546_S2W.html  661_S2W.html  865_S2W.html  876_S2W.html  882_S2W.html  contact_list.html  weather_app_settings.html
generated_GUIs/COT/llm_summarized/: 300.html  33.html  486.html  494.html  495.html  498.html  549.html  596.html  761.html
generated_GUIs/Few_shot/llm_summarized/: 300.html  33.html  486.html  494.html  495.html  498.html  549.html  596.html  70.html  761.html
generating_guis_with_llms/: test.ipynb
gui_complexity/: complexity.ipynb
gui_generation/: dataset_creation.ipynb  description creation.ipynb  pipeline.ipynb  prompts.py  prototyping.ipynb  s2r2s2c.html  summary extraction.ipynb
notebooks/: functions.ipynb  functions.py  gui_creation.ipynb  html_to_image.ipynb  image_description.ipynb  image_description.py  image_description_prompt.ipynb  metadata_creation.ipynb  prompts.py  sampling.ipynb  semantic_information.ipynb  testing.ipynb
notebooks/few shot examples/: 1264.html  1264.json  1264_footer.html  1264_main.html  1264_navbar.html  27729.html  extraction script.ipynb  restructuring.ipynb  test.html
preprocessing/: extract_sample_screens.ipynb  metadata_creation.ipynb  quality_improvement.ipynb  sampling.ipynb  screens_descriptions.ipynb  semantic_information.ipynb  summary_creation_s2w.ipynb
(+363 files in other folders)
